// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attachment message Invalid message Message has invalid attachment.payload.is_reusable property type 1`] = `
Array [
  Object {
    "dataPath": ".attachment.payload.is_reusable",
    "keyword": "type",
    "message": "should be boolean",
    "params": Object {
      "type": "boolean",
    },
    "schemaPath": "#/properties/attachment/properties/payload/properties/is_reusable/type",
  },
]
`;

exports[`Attachment message Invalid message Message has invalid attachment.payload.url property 1`] = `
Array [
  Object {
    "dataPath": ".attachment.payload.url",
    "keyword": "format",
    "message": "should match format \\"uri\\"",
    "params": Object {
      "format": "uri",
    },
    "schemaPath": "#/properties/attachment/properties/payload/properties/url/format",
  },
]
`;

exports[`Attachment message Invalid message Message has invalid attachment.type property 1`] = `
Array [
  Object {
    "dataPath": ".attachment.type",
    "keyword": "enum",
    "message": "should be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "audio",
        "video",
        "image",
        "file",
        "template",
      ],
    },
    "schemaPath": "#/properties/attachment/properties/type/enum",
  },
]
`;

exports[`Attachment message Invalid message Message has no attachment property 1`] = `
Array [
  Object {
    "dataPath": "",
    "keyword": "required",
    "message": "should have required property 'attachment'",
    "params": Object {
      "missingProperty": "attachment",
    },
    "schemaPath": "#/required",
  },
]
`;

exports[`Attachment message Invalid message Message has no attachment.payload property 1`] = `
Array [
  Object {
    "dataPath": ".attachment",
    "keyword": "required",
    "message": "should have required property 'payload'",
    "params": Object {
      "missingProperty": "payload",
    },
    "schemaPath": "#/properties/attachment/required",
  },
]
`;

exports[`Attachment message Invalid message Message has no attachment.payload.url property 1`] = `
Array [
  Object {
    "dataPath": ".attachment.payload",
    "keyword": "required",
    "message": "should have required property 'url'",
    "params": Object {
      "missingProperty": "url",
    },
    "schemaPath": "#/properties/attachment/properties/payload/oneOf/0/required",
  },
  Object {
    "dataPath": ".attachment.payload",
    "keyword": "required",
    "message": "should have required property 'attachment_id'",
    "params": Object {
      "missingProperty": "attachment_id",
    },
    "schemaPath": "#/properties/attachment/properties/payload/oneOf/1/required",
  },
  Object {
    "dataPath": ".attachment.payload",
    "keyword": "oneOf",
    "message": "should match exactly one schema in oneOf",
    "params": Object {
      "passingSchemas": null,
    },
    "schemaPath": "#/properties/attachment/properties/payload/oneOf",
  },
]
`;

exports[`Attachment message Invalid message Message has no attachment.type property 1`] = `
Array [
  Object {
    "dataPath": ".attachment",
    "keyword": "required",
    "message": "should have required property 'type'",
    "params": Object {
      "missingProperty": "type",
    },
    "schemaPath": "#/properties/attachment/required",
  },
  Object {
    "dataPath": ".attachment",
    "keyword": "required",
    "message": "should have required property 'payload'",
    "params": Object {
      "missingProperty": "payload",
    },
    "schemaPath": "#/properties/attachment/required",
  },
]
`;
